src/components/Navbar.scss
nav {
  position: fixed;
  width: 100vw;
  top: 0;
  background-color: #fff;
  height: 140px;
  z-index: 10;
}

.NavContainer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0px 70px 40px 70px;
  height: 140px;

  .NavLogo {
    width: 96px;
    height: auto;
  }

  .NavHamburger {
    display: none;
  }

  .NavContent {
    display: flex;
    list-style-type: none;
    justify-content: center;
    align-items: center;
    margin: 0;
    padding: 0;

    .NavItem {
      padding: 15px 30px;

      a {
        font-size: 20px;
        text-decoration: none;
        color: #2D2D2D;
        font-weight: 440;
        user-select: none;
        
        &:hover {
          color: #1D60AA;
        }

      }

      &.active {
        a {
          color: #1D60AA;
          font-weight: 550;
          font-size: 19.5px;
        }
      }

    }

    .NavDivider {
      border-left: 6px solid #1D60AA;
      height: 38px;
      margin: 0 10px 0 0;
    }

    .NavIcons {
      display: flex;
      list-style-type: none;
      justify-content: space-between;
      align-items: center;
      

      .NavLink {
        padding: 0px 16px;

        &:nth-child(1) {
          svg {
            &:hover {
              color: #313131;
            }
          }
        }

        &:nth-child(2) {
          svg {
            &:hover {
              color: #ef8236;
            }
          }
        }

        &:nth-child(3) {
          svg {
            &:hover {
              color: #e02975;
            }
          }
        }

        &:nth-child(4) {
          svg {
            &:hover {
              color: #0066cc;
            }
          }
        }

        svg {
          width: 30px;
          height: 30px;
          color: #1D60AA;
          transition: 0.4s;

          &:hover {
            transition: 0.4s;
          }
        }
      }
    }
  }
}

@media screen and (max-width: 837px) {
  nav {
    position: fixed;
    top: 0;
  }

  .NavContainer {
    display: flex;
    position: fixed;
    flex-direction: column;
    justify-content: flex-start;
    margin: 0px 0px 0px 0px !important;
    padding: 0px 0px 0 0px;
    width: 100vw;
    // transition: all 0.3s ease-out;

    .NavTop {
      width: 100vw;
      display: flex;
      align-items: center;
      justify-content: space-between;
      background-color: #ffffff;
      padding: 30px 60px;

      .NavLogo {
        width: 72px;
        height: auto;
      }

      .NavHamburger {
        display: flex;
        width: 66px;
        height: 66px;
        padding: 20px;
        color: #1D60AA;
        cursor: pointer;
      }
    }

    .NavContent.shown {
      width: 100vw;
      display: flex;
      flex-flow: column wrap;
      list-style-type: none;
      justify-content: flex-start;
      align-items: center;
      background-color: #ffffff;
      padding-top: 40px;
      height: 100vh;
      clip-path: circle(3000px at 90% -10%);
      -webkit-clip-path: circle(2000px at 100% -50%);
      transition: all 0.6s ease-out;

      .NavItem {
        padding: 16px 0px;
      }

      .NavDivider {
        border-left: 0px solid #0066cc;
        border-top: 5px solid #0066cc;
        width: 160px;
        height: 5px;
        margin: 20px 0px 40px 0;
      }

      .NavIcons {
        display: flex;
        list-style-type: none;
        justify-content: space-between;
        align-items: center;
      }
    }

    .NavContent.hidden {
      display: flex;
      flex-flow: column wrap;
      clip-path: circle(0px at 90% 10%);
      -webkit-clip-path: circle(0px at 90% -10%);
      transition: all 0s ease-out;
    }

    &.open {
      height: 100vh;
      background-color: #ffffff;
      display: flex;
      position: fixed;
      flex-direction: column;
      justify-content: flex-start;
      margin: 0px 0px 0px 0px !important;
      padding: 0px 0px 0 0px;
      width: 100vw;
      // transition: all 0.3s ease-out;
    }
  }
}

